Add an AssessmentLoader class to load an assessment given its URLs